force-app/main/default/objects/Academic_Course__c/Academic_Course__c.object-meta.xml
<CustomObject>
    <label>Academic Course</label>
    <nameField>
        <label>Academic Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>