force-app/main/default/objects/Academic_Course__c/fields/Admission_Fees__c.field-meta.xml
<CustomField>
    <fullName>Admission_Fees__c</fullName>
    <label>Admission Fees</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>