force-app/main/default/objects/Academic_Course__c/fields/Batch_Time__c.field-meta.xml
<CustomField>
    <fullName>Batch_Time__c</fullName>
    <label>Batch Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>