force-app/main/default/objects/Academic_Course__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manipal School of Information Sciences (MSIS)</fullName>
            </value>
            <value>
                <fullName>Manipal School of Natural Sciences (MCNS)</fullName>
            </value>
            <value>
                <fullName>Manipal School of Architecture &amp; Planning (MSAP)</fullName>
            </value>
            <value>
                <fullName>Department of Design (DoD)</fullName>
            </value>
            <value>
                <fullName>Manipal Institute of Management (MIM)</fullName>
            </value>
            <value>
                <fullName>T A Pai Management Institute (TAPMI)</fullName>
            </value>
            <value>
                <fullName>Welcomgroup Graduate School of Hotel Administration (WGSHA)</fullName>
            </value>
            <value>
                <fullName>Department of Atomic &amp; Molecular Physics (DAMP)</fullName>
            </value>
            <value>
                <fullName>Department of Commerce (DoC)</fullName>
            </value>
            <value>
                <fullName>Department of Public Policy (DPP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>