force-app/main/default/objects/Academic_Course__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Academic Courses</relationshipLabel>
    <relationshipName>Academic_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>