force-app/main/default/objects/Academic_Course__c/fields/Faculty_Name__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>FacultyName</relationshipName>
    <type>Lookup</type>
</CustomField>