force-app/main/default/objects/Academic_Course__c/fields/Maximum_Seats__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Seats__c</fullName>
    <label>Maximum Seats</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>