force-app/main/default/objects/Academic_Course__c/fields/Scholrship_Discount__c.field-meta.xml
<CustomField>
    <fullName>Scholrship_Discount__c</fullName>
    <label>Scholrship Discount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>