force-app/main/default/objects/Academic_Course__c/fields/Tution_Fees__c.field-meta.xml
<CustomField>
    <fullName>Tution_Fees__c</fullName>
    <label>Tution Fees</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>